refactoring appointments repository

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,7 +30,8 @@
               "ts": "never",
             }
           ],
-        "prettier/prettier": "error"
+        "prettier/prettier": "error",
+        "@typescript-eslint/interface-name-prefix": ["error", {"prefixWithI": "always"}]
     },
     "settings": {
         "import/resolver": {
